samples/_failures_safe/1761412810_075299_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c268b07.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0c268b07.c:160:35: error: expected ‘;’ at end of input
  160 |         tokens[token_count].column
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_0c268b07.c:160:9: error: expected declaration or statement at end of input
  160 |         tokens[token_count].column
      |         ^~~~~~
./samples/SAFE/__tmp_0c268b07.c:160:9: error: expected declaration or statement at end of input
